--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -17,6 +17,11 @@
     </properties>
 
     <dependencies>
+        <dependency><!--        引入自己定义的api通用包，可以使用Payment支付的Entity-->
+            <groupId>com.iafoot.springcloud</groupId>
+            <artifactId>cloud-api-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
