--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -17,6 +17,11 @@
     </properties>
 
     <dependencies>
+        <!--        Eureka client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency><!--        引入自己定义的api通用包，可以使用Payment支付的Entity-->
             <groupId>com.iafoot.springcloud</groupId>
             <artifactId>cloud-api-common</artifactId>
