--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 server:
   port: 7001
-
+spring:
+  application:
+    name: cloud-eureka-service
 eureka:
   instance:
-    hostname: localhost
+    # eureka服务端的实例名称
+    hostname: eureka7001.com
   client:
-    register-with-eureka: false    #false 表示不向注册中心注册自己
-    fetch-registry: false    #false 表示自己就是注册中心,我的职责就是维护服务实例,并不需要去检索服务
+    # false表示不向注册中心注册自己
+    register-with-eureka: false
+    # false表示自己端就是注册中心,我的职责就是维护服务实例,并不需要检索服务
+    fetch-registry: false
     service-url:
-      defaultZone:  http://${eureka.instance.hostname}:${server.port}/eureka/   #设置与 eureka Server 交互地址,查询服务和注册服务需要这个地址
-
+      # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
+      defaultZone: http://eureka7002.com:7002/eureka/
