--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -14,4 +14,7 @@ eureka:
     fetch-registry: false
     service-url:
       # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
+      # 集群指向其他eureka
       defaultZone: http://eureka7002.com:7002/eureka/
+      #单机就是自己
+      #defaultZone: http://eureka7001.com:7001/eureka/
