--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
     <module>cloudalibaba-consumer-nacos-order83</module>
     <module>cloudalibaba-config-nacos-client3377</module>
       <module>cloudalibaba-sentinel-server8401</module>
+      <module>cloudalibaba-provider-payment9003</module>
+    <module>cloudalibaba-provider-payment9004</module>
+      <module>cloudalibaba-consumer-nacos-order84</module>
   </modules>
 
   <!--统一管理jar包版本-->
